@@ -1,5 +1,6 @@
 Changes for 1.4.1:
 
+ - fixed 'count' function for trigger expression (Eugene)
  - added availability of using "['%" character for key (Eugene)
  - fixed compilation under FreeBSD (Eugene)
  - fixed XML export (Eugene)
